; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/kernel/extr_module.c_apply_r_mips_highest.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/kernel/extr_module.c_apply_r_mips_highest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.module = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.module*, i32*, i32, i64, i32)* @apply_r_mips_highest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apply_r_mips_highest(%struct.module* %0, i32* %1, i32 %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.module*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.module* %0, %struct.module** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  %16 = call i64 @WARN_ON(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %5
  %19 = load i32, i32* @EINVAL, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %6, align 4
  br label %33

21:                                               ; preds = %5
  %22 = load i32*, i32** %8, align 8
  %23 = load i32, i32* %22, align 4
  %24 = and i32 %23, -65536
  %25 = zext i32 %24 to i64
  %26 = load i64, i64* %10, align 8
  %27 = add nsw i64 %26, 140739635871744
  %28 = ashr i64 %27, 48
  %29 = and i64 %28, 65535
  %30 = or i64 %25, %29
  %31 = trunc i64 %30 to i32
  %32 = load i32*, i32** %8, align 8
  store i32 %31, i32* %32, align 4
  store i32 0, i32* %6, align 4
  br label %33

33:                                               ; preds = %21, %18
  %34 = load i32, i32* %6, align 4
  ret i32 %34
}

declare dso_local i64 @WARN_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
